# system-configuration

./: Makefile  README.md  configuration.nix  git.nix  home.nix  neovim.nix  pyproject.toml  zsh.nix
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
dotfiles/: .bashrc  .tmux.conf
dotfiles/.config/lazygit/: config.yml
dotfiles/.config/nvim/: init.lua  lazy-lock.json
dotfiles/.config/nvim/plugins/: nvim-tree.lua
scripts/: check-nix.sh  format-nix.sh  format.sh  install-home-manager.sh  install-nix.sh  install.sh  update-home.sh  update.sh
