[tool.poetry]
name = "global python environment"
version = "0.1.0"
description = "minimum packages required for normal use"
authors = ["Hinny Tsang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
